app/assets/sass/dri/dri.scss
/* ... */
.dri_content_list_collection_data {
  margin: 0;
  padding: 0;
  height: 128px;
  width: 500px;
  float: right;
  a h4 {
    margin: 3px 0 10px 15px;
    padding: 0;
    color: $dri_grey;
    font-size: 100%;
    line-height: 1.3em;
    font-weight: bold;
    max-height: 28px;
    overflow: hidden;
  }
  p {
    margin: 0 0 10px 15px;
    padding: 0;
    color: $dri_greytext;
    font-size: 100%;
    line-height: 1.3em;
    max-height: 42px;
    overflow: hidden;
  }
  .dri_list_description {
    max-height: 2.6em;
    overflow: hidden;
  }
  .dri_list_subject {
    max-height: 1.3em;
    overflow: hidden;
  }
  a .dri_num_list_objects {
    margin: 10px 0 0 15px;
    padding: 0;
    color: $dri_greytext;
    font-size: 100%;
    line-height: 1.3em;
  }
  .dri_list_icon {
    padding-left: 15px;
  }
}

/*-------------- Dialog Box --------------*/
.dri_dialog_example {
  margin: 0;
  padding: 12px;
  border: 1px solid #D9DADB;
  background-color: #FFF;
  color: #808082;
}

/* Third Party CSS */

/*
 * Dropit v1.0
 * http://dev7studios.com/dropit
 *
 * Copyright 2012, Dev7studios
 * Free to use and abuse under the MIT license.
 * http://www.opensource.org/licenses/mit-license.php
 */

/* These styles assume you are using ul and li */
.dropit {
  list-style: none;
  padding: 0;
  margin: 0;
}

.dropit .dropit-trigger {
  position: relative;
}

.dropit .dropit-submenu {
  position: absolute;
  top: 100%;
  right: -14%;
  /* dropdown left or right */
  z-index: 1000;
  display: none;
  list-style: none;
  border: 1px solid #D9DADB;
  margin: 2px 0 0 0;
  padding: 2px 16px 2px 7px;
  display: block;
  -moz-border-radius: 2px;
  border-radius: 2px;
  background-color: #f0f0f0;
}

.dropit .dropit-open .dropit-submenu {
  display: block;
}

/*-------------- OBJECT VIEW --------------*/

.dri_object_title_top {
  font-size: 110%;
  padding: 6px 20px 4px 10px;
  margin: 10px 0 10px 0;
  height: 26px;
  text-overflow: ellipsis;
  overflow: hidden;
  color: #fff;
  background-color: $dri_grey;
  width: 73%;
  font-weight: bold;
}

/*-------------- Media asset/ Multiple Media Assets Carousel --------------*/
.dri_object_render_block {
  margin: 10px 0 10px 0;
  padding: 0px;
}

.dri_bottom_stack {
  z-index: 0;
}

h2.dri_no_asset_availiable {
  margin: 0px 0 0 0;
  padding: 0px;
  color: $dri_grey;
  font-weight: bold;
  font-size: 100%;
  font-style: italic;
}

/* assets carousel */
.dri_asset_holder {
  margin: 20px 0 0 0;
  padding: 0px;
  max-width: 400px;
  max-height: 300px;
  display: block;
  overflow: hidden;
  .carousel-control {
    background: none;
    border: none;
    opacity: 1.0;
    font-size: 100%;
    line-height: 100%;
  }
  .carousel-control.left {
    //background-image: url("previous_carousel_arrow.png");
    top: 95%;
    width: 12px;
    height: 8px;
    margin-top: -5px;
    padding: 0;
  }
  .carousel-control.right {
    //background-image: url("next_carousel_arrow.png");
    top: 95%;
    width: 12px;
    height: 10px;
    margin-top: -5px;
    padding: 0;
  }
  .dri_asset_carousel_item {
    height: 300px;
    p {
      padding: 5px 0 0 40px;
    }
    a {
      img {
        max-height: 300px;
      }
    }
    .carousel-caption {
      background: rgba(47, 47, 47, 0.75);
      height: 30px;
      padding: 0px;
      margin: 0px;
      a {
        color: #fff;
      }
    }
    p.dri_restrict_message {
      margin: 8px 0 0 0;
      padding: 0;
      color: $dri_greytext;
    }
  }
  p.dri_assets_total {
    border-top: 1px solid #D9DADB;
    padding: 10px 0 0 0;
    margin: 0 0 20px 0;
    font-weight: bold;
    color: $dri_grey;
    font-size: 100%;
  }
}

/*-------------- Media asset Image Tools  --------------*/
.dri_asset_tools {
  margin: 5px 0 15px 0;
  padding: 0;
  display: block;
  width: 500px;
  float: left;
  p a {
    margin: 0;
    padding: 0;
    color: $dri_greytext;
    text-decoration: underline;
    float: left;
  }
  p a:hover {
    color: $dri_grey;
  }
  ul {
    margin: 0 20px 0 0;
    padding: 0;
    float: left;
  }
  li {
    float: left;
    list-style: none;
    display: block;
    margin: 0;
    padding: 0;
    a {
      list-style: none;
      color: $dri_greytext;
      text-decoration: none;
      border-right: 1px solid #D9DADB;
      display: block;
      margin: 0;
      padding: 0 10px 0 10px;
    }
    a:hover {
      color: $dri_grey;
      text-decoration: underline;
    }
  }
  li.selected a {
    color: #288DC0;
    font-weight: bold;
  }
  li.first a {
    background: image-url("dri/prev_arrow.png") no-repeat center;
  }
  li.last a {
    border-right: none;
    background: image-url("dri/next_arrow.png") no-repeat center;
  }
}

.dri_green_button {
  padding: 0;
  margin: 0;
  float: left;
  margin: 0 20px 0 0;
  a {
    padding: 0;
    margin: 0;
    color: #00948F;
    border: none;
    font-weight: bold;
    display: block;
    -moz-border-radius: 2px;
    border-radius: 2px;
  }
  a:hover {
    color: #007F79;
    text-decoration: underline;
  }
}

/*-------------- Restricted Media asset --------------*/

h2.dri_restrict_title {
  margin: 0px 0 0 0;
  padding: 0px;
  color: $dri_grey;
  font-weight: bold;
  font-size: 100%;
}

p.dri_restrict_message {
  margin: 0px;
  padding: 0;
  color: $dri_greytext;
}

p.dri_restrict_progress {
  margin: 0px;
  padding: 0px 80px 10px 0;
  color: #00948F;
  text-decoration: underline;
}

input.dri_request_access_button {
  color: #FFF;
  border: none;
  background-color: #00948F;
  padding: 0;
  margin: 0px 0 20px 0;
  width: 230px;
  height: 26px;
  display: block;
  -moz-border-radius: 2px;
  border-radius: 2px;
}

input.dri_request_access_button:hover {
  background-color: #007F79;
}

/*-------------- MetaData Readview  --------------*/
.modal-content {
  padding: 10px;
  .dri_object_metadata_readview {
    max-height: 400px;
    overflow: scroll;
    dl {
      padding: 15px;
    }
  }
  .dri_child_links > a {
    color: $dri_grey;
  }
}
/* ... */

